--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,10 +9,23 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "双足机器人/icra 2021/强化学习在双足机器人的鲁棒参数化运动学/强化学习/域随机化（domain randomization).md",
+            "file": "README.md",
             "mode": "source"
           }
-        }
+        },
+        "group": "8a4492d9aff72d31"
+      },
+      {
+        "id": "69f589fc1433cdd2",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "README.md",
+            "mode": "preview"
+          }
+        },
+        "group": "8a4492d9aff72d31"
       }
     ],
     "direction": "vertical"
@@ -68,7 +81,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "双足机器人/icra 2021/强化学习在双足机器人的鲁棒参数化运动学/强化学习/域随机化（domain randomization).md",
+                "file": "README.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -85,17 +98,17 @@
     "direction": "horizontal",
     "width": 300
   },
-  "active": "813391ba0a83b820",
+  "active": "69f589fc1433cdd2",
   "lastOpenFiles": [
+    "README.md",
+    "双足机器人/icra 2021/强化学习在双足机器人的鲁棒参数化运动学/传统/传统算法.md",
+    "机器人学基础/雅可比：速度和精力/联立角速度和线速度.md",
+    "机器人学基础/雅可比：速度和精力/未命名.md",
+    "机器人学基础/雅可比：速度和精力/角速度.md",
     "双足机器人/icra 2021/强化学习在双足机器人的鲁棒参数化运动学/强化学习/未命名.md",
     "双足机器人/icra 2021/强化学习在双足机器人的鲁棒参数化运动学/强化学习/强化学习.md",
-    "双足机器人/icra 2021/强化学习在双足机器人的鲁棒参数化运动学/传统/传统算法.md",
     "双足机器人/icra 2021/强化学习在双足机器人的鲁棒参数化运动学/传统/HZD.md",
     "双足机器人/icra 2021/强化学习在双足机器人的鲁棒参数化运动学/传统/未命名.md",
-    "双足机器人/icra 2021/强化学习在双足机器人的鲁棒参数化运动学/强化学习.md",
-    "双足机器人/icra 2021/强化学习在双足机器人的鲁棒参数化运动学/传统算法.md",
-    "双足机器人/icra 2021/强化学习在双足机器人的鲁棒参数化运动学/CoP.md",
-    "双足机器人/icra 2021/强化学习在双足机器人的鲁棒参数化运动学/ZMP.md",
-    "双足机器人/icra 2021/强化学习在双足机器人的鲁棒参数化运动学/未命名.md"
+    "双足机器人/icra 2021/强化学习在双足机器人的鲁棒参数化运动学/强化学习.md"
   ]
 }
