--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "README.md",
+            "file": "双足机器人/icra 2021/强化学习在双足机器人的鲁棒参数化运动学/传统/ZMP.md",
             "mode": "source"
           }
         },
@@ -21,7 +21,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "README.md",
+            "file": "双足机器人/icra 2021/强化学习在双足机器人的鲁棒参数化运动学/传统/ZMP.md",
             "mode": "preview"
           }
         },
@@ -81,7 +81,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "README.md",
+                "file": "双足机器人/icra 2021/强化学习在双足机器人的鲁棒参数化运动学/传统/ZMP.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -100,15 +100,15 @@
   },
   "active": "69f589fc1433cdd2",
   "lastOpenFiles": [
-    "README.md",
+    "双足机器人/icra 2021/强化学习在双足机器人的鲁棒参数化运动学/传统/ZMP.md",
+    "双足机器人/icra 2021/强化学习在双足机器人的鲁棒参数化运动学/传统/支撑多边形.md",
     "双足机器人/icra 2021/强化学习在双足机器人的鲁棒参数化运动学/传统/传统算法.md",
+    "README.md",
     "机器人学基础/雅可比：速度和精力/联立角速度和线速度.md",
     "机器人学基础/雅可比：速度和精力/未命名.md",
     "机器人学基础/雅可比：速度和精力/角速度.md",
     "双足机器人/icra 2021/强化学习在双足机器人的鲁棒参数化运动学/强化学习/未命名.md",
     "双足机器人/icra 2021/强化学习在双足机器人的鲁棒参数化运动学/强化学习/强化学习.md",
-    "双足机器人/icra 2021/强化学习在双足机器人的鲁棒参数化运动学/传统/HZD.md",
-    "双足机器人/icra 2021/强化学习在双足机器人的鲁棒参数化运动学/传统/未命名.md",
-    "双足机器人/icra 2021/强化学习在双足机器人的鲁棒参数化运动学/强化学习.md"
+    "双足机器人/icra 2021/强化学习在双足机器人的鲁棒参数化运动学/传统/HZD.md"
   ]
 }
